Firefox CSS fixes for jumpy sidebar menupopup

--- a/NsCDE/share/config_templates/integration/firefox/ff9x_nscdeChrome.css
+++ b/NsCDE/share/config_templates/integration/firefox/ff9x_nscdeChrome.css
@@ -188,6 +188,10 @@ menulist:not(#openHandler) {
   border-right-color: var(--nscde-bs-color-6) !important;
 }
 
+#sidebarMenu-popup > .subviewbutton {
+  border: 1px solid var(--nscde-bg-color-6) !important;
+}
+
 #sidebarMenu-popup .subviewbutton[checked],
 #sidebarMenu-popup .subviewbutton:active,
 #sidebar-switcher-target:active,
